fixing double border bug on input-section

--- a/css/shanti-main-mediabase.css
+++ b/css/shanti-main-mediabase.css
@@ -43,12 +43,8 @@
   height: 8.9rem;
 }
 
-.extruder .input-section:nth-of-type(2){ border:none;} /* fixes big in markup producing two input section wrappers */
-
-
-.advanced-view .form-group:nth-of-type(2) {
-  display: none;
-}
+.extruder .input-section:nth-of-type(2){ border:none !important;} /* fixes big in markup producing two input section wrappers */
+.advanced-view .form-group:nth-of-type(2) { display: none;}
 
 
 
